Fix collapsing content on tablet

--- a/src/_sass/components/_components.services.scss
+++ b/src/_sass/components/_components.services.scss
@@ -16,6 +16,7 @@
   padding-bottom: 60px; // button offset
   border-radius: 5px;
   overflow: hidden;
+  flex-basis: 100%;
 
   @include box-shadow;
 
